--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/solmate"]
 	path = lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "lib/party-addresses"]
+	path = lib/party-addresses
+	url = https://github.com/PartyDAO/party-addresses
